# netbench

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  asio_client  asio_perf  io_uring_trace.bp  shell.nix
app/: CMakeLists.txt  metric_hud.cpp  metric_hud.hpp
app/asio/: asio_client.cpp  asio_perf_test.cpp
app/bsd/: acceptor.hpp  connection.cpp  connection.hpp  io_context.cpp  main.cpp  receiver.cpp  receiver.hpp  socket.hpp
app/client/: connection.cpp  connection.hpp  main.cpp  sender.cpp  sender.hpp  uring.cpp  uring_sender.cpp  uring_sender.hpp
app/common/: build_info.hpp.in  metadata.hpp  metric_hud.cpp  metric_hud.hpp  utils.cpp  utils.hpp
app/iouring/: echo.c  io_context.cpp  io_context.hpp  main.cpp  provided_buffer_pool.cpp  provided_buffer_pool.hpp
app/pingpong/: main.cpp  worker.cpp  worker.hpp
app/receiver/: asio_ioctx_mt.cpp  main.cpp  worker.cpp  worker.hpp
app/uring/: acceptor.hpp  connection.hpp  io_context.cpp  io_context.hpp  main.cpp  provided_buffer_pool.cpp  provided_buffer_pool.hpp  receiver.cpp  receiver.hpp
benchmark/: __init__.py  plot_results.py  run_scenarios.py
benchmark/runner/: __init__.py  affinity.py  config.py  constants.py  exec.py  linkage.py  pingpong.py  plotting.py  receiver_client.py  types.py  utils.py
lib/: CMakeLists.txt
lib/asio/: receiver.hpp
lib/bsd/: acceptor.cpp  acceptor.hpp  buffered_sender.cpp  buffered_sender.hpp  connector.cpp  connector.hpp  io_context.cpp  io_context.hpp  receiver.cpp  receiver.hpp  socket.cpp  socket.hpp  tcp.hpp
lib/rasio/: acceptor.cpp  acceptor.hpp  buffered_sender.hpp  connector.cpp  connector.hpp  handler_allocator.hpp  receiver.cpp  receiver.hpp  socket.hpp  tcp.hpp
lib/uring/: acceptor.cpp  acceptor.hpp  bundle_receiver.cpp  bundle_receiver.hpp  bundle_sender.cpp  bundle_sender.hpp  connector.cpp  connector.hpp  io_context.cpp  io_context.hpp  provided_buffer_pool.cpp  provided_buffer_pool.hpp  receiver.cpp  receiver.hpp  registered_buffer_pool.cpp  registered_buffer_pool.hpp  sender.cpp  sender.hpp  socket.hpp  tcp.hpp
lib/utility/: logger.cpp  logger.hpp  machine_info.cpp  machine_info.hpp  metric_hud.cpp  metric_hud.hpp  mmap_buffer_array.cpp  mmap_buffer_array.hpp  ref_or_own.hpp  tagged_integer.hpp  time.hpp
tool/: io_uring_trace.bt  memband_intel.sh  memband_zen.sh  syscall_overhead.c  zerocopy_send.c  zerocopy_trace.bp  zerocopy_trace.bt
